// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputField should render correctly 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-1ws5f5r-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:hover,
.cache-1ws5f5r-StyledInput:focus {
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::placeholder {
  opacity: 1;
}

.cache-lzuy3q-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-1aqops6-StyledError {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-1txlkbl-StyledRelativeDiv el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1ws5f5r-StyledInput el3h3g92"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-lzuy3q-StyledExpandable e5hc7t70"
      >
        <div
          class="cache-1aqops6-StyledError el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-lsdaap-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f3f3f4;
  border-color: #e9eaeb;
  color: #b5b7bd;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-lsdaap-StyledInput::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-lsdaap-StyledInput::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-lsdaap-StyledInput:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-lsdaap-StyledInput::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-lsdaap-StyledInput:hover,
.cache-lsdaap-StyledInput:focus {
  border-color: #792dd4;
}

.cache-lsdaap-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-lsdaap-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-lsdaap-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-lsdaap-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-lsdaap-StyledInput::placeholder {
  opacity: 1;
}

.cache-lzuy3q-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-1aqops6-StyledError {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-1txlkbl-StyledRelativeDiv el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-lsdaap-StyledInput el3h3g92"
          disabled=""
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-lzuy3q-StyledExpandable e5hc7t70"
      >
        <div
          class="cache-1aqops6-StyledError el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly generated 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-1ws5f5r-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:hover,
.cache-1ws5f5r-StyledInput:focus {
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::placeholder {
  opacity: 1;
}

.cache-lzuy3q-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-1aqops6-StyledError {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-1txlkbl-StyledRelativeDiv el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1ws5f5r-StyledInput el3h3g92"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-lzuy3q-StyledExpandable e5hc7t70"
      >
        <div
          class="cache-1aqops6-StyledError el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly id 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-1ws5f5r-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:hover,
.cache-1ws5f5r-StyledInput:focus {
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::placeholder {
  opacity: 1;
}

.cache-lzuy3q-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-1aqops6-StyledError {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-1txlkbl-StyledRelativeDiv el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1ws5f5r-StyledInput el3h3g92"
          id="id"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-lzuy3q-StyledExpandable e5hc7t70"
      >
        <div
          class="cache-1aqops6-StyledError el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly notice 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-1ws5f5r-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:hover,
.cache-1ws5f5r-StyledInput:focus {
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::placeholder {
  opacity: 1;
}

.cache-lzuy3q-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-1aqops6-StyledError {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

.cache-jfxruw-StyledText-StyledSpan-StyledNotice {
  color: #727683;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 8px;
  margin-top: 4px;
}

.cache-il0zju-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #727683;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-il0zju-StyledIcon-sizeStyles .fillStroke {
  stroke: #727683;
  fill: none;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-1txlkbl-StyledRelativeDiv el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1ws5f5r-StyledInput el3h3g92"
          name="test"
          type="text"
          value=""
        />
      </div>
      <div
        class="cache-lzuy3q-StyledExpandable e5hc7t70"
      >
        <div
          class="cache-1aqops6-StyledError el3h3g94"
        />
      </div>
      <span
        class="el3h3g93 e19pqvs30 cache-jfxruw-StyledText-StyledSpan-StyledNotice e13y3mga0"
      >
        <svg
          class="cache-il0zju-StyledIcon-sizeStyles e1gt4cfo0"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M15 8A7 7 0 1 1 1 8a7 7 0 0 1 14 0M9 5a1 1 0 1 1-2 0 1 1 0 0 1 2 0M6.75 8a.75.75 0 0 0 0 1.5h.75v1.75a.75.75 0 0 0 1.5 0v-2.5A.75.75 0 0 0 8.25 8z"
            fill-rule="evenodd"
          />
        </svg>
        notice
      </span>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly random 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-1ws5f5r-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ws5f5r-StyledInput:hover,
.cache-1ws5f5r-StyledInput:focus {
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ws5f5r-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ws5f5r-StyledInput::placeholder {
  opacity: 1;
}

.cache-i0z4cq-StyledRightElement-StyledRightElement-StyledRightElement {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #727683;
  pointer-events: auto;
}

.cache-i0z4cq-StyledRightElement-StyledRightElement-StyledRightElement:hover,
.cache-i0z4cq-StyledRightElement-StyledRightElement-StyledRightElement:focus-within {
  color: #3f4250;
}

.cache-i0z4cq-StyledRightElement-StyledRightElement-StyledRightElement>button {
  box-shadow: none!important;
}

.cache-1128fcb-Stack-RightComponent {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  min-width: 24px;
}

.cache-1xcp86l-StyledGhostButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 32px;
  padding: 0 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #3f4250;
}

.cache-1xcp86l-StyledGhostButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1xcp86l-StyledGhostButton:active {
  box-shadow: 0px 0px 0px 3px #151a2d5c;
}

.cache-1xcp86l-StyledGhostButton:hover,
.cache-1xcp86l-StyledGhostButton:active {
  background: #e9eaeb;
  color: #222638;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-lzuy3q-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-1aqops6-StyledError {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-1txlkbl-StyledRelativeDiv el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1ws5f5r-StyledInput el3h3g92"
          name="test"
          type="text"
          value=""
        />
        <div
          class="cache-i0z4cq-StyledRightElement-StyledRightElement-StyledRightElement el3h3g97"
        >
          <div
            class="cache-1128fcb-Stack-RightComponent el3h3g91"
          >
            <button
              aria-label="randomize"
              class="cache-1xcp86l-StyledGhostButton e112qvla0"
              type="button"
            >
              <svg
                class="cache-1dnbbhk-StyledIcon-sizeStyles e1gt4cfo0"
                viewBox="0 0 16 16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m13.73 3.963.337-.732.731-.338a.345.345 0 0 0 0-.628l-.73-.338-.339-.725a.345.345 0 0 0-.628 0l-.338.731-.724.339a.345.345 0 0 0 0 .628l.731.338.338.725a.34.34 0 0 0 .621 0m-7.933 0 .338-.732.731-.338a.345.345 0 0 0 0-.628l-.73-.332-.339-.731a.34.34 0 0 0-.62 0l-.339.731-.73.339a.345.345 0 0 0 0 .628l.73.338.338.725a.34.34 0 0 0 .621 0m7.312 5.175-.338.732-.73.338a.345.345 0 0 0 0 .628l.73.338.338.732a.345.345 0 0 0 .628 0l.338-.732.724-.345a.345.345 0 0 0 0-.628l-.73-.338-.339-.732c-.117-.262-.503-.262-.62.007m-1.27-3.023L9.887 4.162a.687.687 0 0 0-.973 0L1.202 11.87a.69.69 0 0 0 0 .973l1.952 1.953c.269.27.704.27.973 0l7.705-7.709a.68.68 0 0 0 .007-.973M9.424 7.557l-.972-.973.952-.952.972.973z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
      <div
        class="cache-lzuy3q-StyledExpandable e5hc7t70"
      >
        <div
          class="cache-1aqops6-StyledError el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly required 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-1ciudd4-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: calc(1 * 32px);
}

.cache-1ciudd4-StyledInput::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ciudd4-StyledInput::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ciudd4-StyledInput:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ciudd4-StyledInput::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1ciudd4-StyledInput:hover,
.cache-1ciudd4-StyledInput:focus {
  border-color: #792dd4;
}

.cache-1ciudd4-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1ciudd4-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1ciudd4-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-1ciudd4-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-1ciudd4-StyledInput::placeholder {
  opacity: 1;
}

.cache-1539on3-StyledRightElement-StyledRightElement {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 0 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #727683;
}

.cache-1539on3-StyledRightElement-StyledRightElement:hover,
.cache-1539on3-StyledRightElement-StyledRightElement:focus-within {
  color: #3f4250;
}

.cache-3cgt5r-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-3cgt5r-StyledIcon-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.cache-lzuy3q-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: hidden;
  height: auto;
  max-height: 0px;
}

.cache-1aqops6-StyledError {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-1txlkbl-StyledRelativeDiv el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1ciudd4-StyledInput el3h3g92"
          name="test"
          required=""
          type="text"
          value=""
        />
        <div
          class="cache-1539on3-StyledRightElement-StyledRightElement el3h3g97"
        >
          <svg
            class="cache-3cgt5r-StyledIcon-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M10 2h4l-.79 7.91 6.45-4.64 2 3.46L14.42 12l7.24 3.27-2 3.46-6.45-4.64L14 22h-4l.79-7.91-6.45 4.64-2-3.46L9.58 12 2.34 8.73l2-3.46 6.45 4.64z"
            />
          </svg>
        </div>
      </div>
      <div
        class="cache-lzuy3q-StyledExpandable e5hc7t70"
      >
        <div
          class="cache-1aqops6-StyledError el3h3g94"
        />
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`TextInputField should render correctly with minLength 1`] = `
<DocumentFragment>
  .cache-1txlkbl-StyledRelativeDiv {
  position: relative;
}

.cache-1u8vb78-StyledInput {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #ffffff;
  background-image: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  color: #3f4250;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  border-color: #b3144d;
}

.cache-1u8vb78-StyledInput::-webkit-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u8vb78-StyledInput::-moz-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u8vb78-StyledInput:-ms-input-placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u8vb78-StyledInput::placeholder {
  color: #727683;
  opacity: 0;
}

.cache-1u8vb78-StyledInput:hover,
.cache-1u8vb78-StyledInput:focus {
  border-color: #792dd4;
}

.cache-1u8vb78-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border-color: #792dd4;
}

.cache-1u8vb78-StyledInput::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1u8vb78-StyledInput::-moz-placeholder {
  opacity: 1;
}

.cache-1u8vb78-StyledInput:-ms-input-placeholder {
  opacity: 1;
}

.cache-1u8vb78-StyledInput::placeholder {
  opacity: 1;
}

.cache-1u8vb78-StyledInput:hover,
.cache-1u8vb78-StyledInput:focus {
  border-color: #92103f;
}

.cache-1u8vb78-StyledInput:focus {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
  border-color: #92103f;
}

.cache-rk9ngy-StyledExpandable {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  overflow: visible;
  height: auto;
  max-height: initial;
}

.cache-1aqops6-StyledError {
  font-size: 12px;
  color: #b3144d;
  padding-top: 2px;
}

<form
    novalidate=""
  >
    <div>
      <div
        class="cache-1txlkbl-StyledRelativeDiv el3h3g95"
      >
        <input
          autocomplete="on"
          class="cache-1u8vb78-StyledInput el3h3g92"
          name="test"
          type="text"
          value="test"
        />
      </div>
      <div
        class="cache-rk9ngy-StyledExpandable e5hc7t70"
      >
        <div
          class="cache-1aqops6-StyledError el3h3g94"
        >
          This field should have a length greater than 13
        </div>
      </div>
    </div>
  </form>
</DocumentFragment>
`;
